fix overflow

--- a/asset/css/reponsive.css
+++ b/asset/css/reponsive.css
@@ -6,10 +6,18 @@
         max-width: 70%;
     }
 
+    .cart-items {
+        overflow: scroll;
+        height  : 165px;
+    }
+
+    .cart-price {
+        font-size: 10px;
+    }
+
     .modal {
-        left       : 5%;
-        width      : 90%;
-        padding-top: 100px;
+        left : 5%;
+        width: 90%;
     }
 
     .modal-content {
@@ -28,13 +36,9 @@
         margin-right: 0.5em;
     }
 
-    .cart-price {
-        margin-right: 1rem;
-    }
-
     #cart {
         padding: 10px;
-        width  : 47%;
+        width  : 38%;
 
     }
 }
