--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -285,15 +285,7 @@ p:hover {
     margin-right    : 25px;
 }
 
-.cart-row:last-child {
-    border-bottom: 1px solid black;
-}
 
-.cart-row:last-child .cart-column {
-    border   : none;
-    font-size: 16px;
-
-}
 
 
 .cart-total {
@@ -315,7 +307,15 @@ p:hover {
 }
 
 .close {
-    font-size: 20px;
+    width           : 20px;
+    height          : 20px;
+    line-height     : 15px;
+    text-align      : center;
+    font-size       : 20px;
+    cursor          : pointer;
+    border-radius   : 50%;
+    background-color: #e61038;
+
 }
 
 /* register */
